# calsync

./: .gitignore  CLAUDE.md  README.md  build_commit.py  com.cal-sync.plist  com.calsync.plist  config.yaml.example  pyproject.toml  setup.py
cal_sync/: cli.py  config.py  google_cal.py  icloud.py  setup.py  state.py  sync.py
calsync/: cli.py  com.calsync.plist  config.py  diff.py  google_cal.py  icloud.py  icloud_write.py  reverse_sync.py  setup.py  state.py  sync.py  update_check.py
docs/plans/: 2026-02-23-ical-to-gcal-sync-design.md  2026-02-23-ical-to-gcal-sync-plan.md  2026-02-24-calendar-selection-design.md  2026-02-24-calendar-selection-plan.md  2026-02-24-cli-subcommands-design.md  2026-02-24-cli-subcommands-plan.md  2026-02-25-update-notification-design.md  2026-02-25-update-notification-plan.md
tests/: test_build_commit.py  test_cli.py  test_cli_update.py  test_config.py  test_diff.py  test_google_cal.py  test_icloud.py  test_icloud_write.py  test_reverse_sync.py  test_state.py  test_sync.py  test_update_check.py
