[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cal-sync"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "caldav>=1.3",
    "vobject>=0.9",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
cal-sync = "cal_sync.cli:main"
